fix: 🐛 `modify time` error

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Get dependencies
         run: |
           sudo apt-get update
-          sudo apt-get -y install gcc-mingw-w64-x86-64
+          \cp -f /usr/share/zoneinfo/Asia/Shanghai /etc/localtime
 
       - name: Set up python
         uses: actions/setup-python@v2
