feat: 🎸 add some source

--- a/config.json
+++ b/config.json
@@ -3,6 +3,10 @@
   "source": [
     "all",
     "book",
-    "subscribe"
+    "subscribe",
+    "theme",
+    "readConfig",
+    "replaceRule",
+    "httpTTS"
   ]
 }
