--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Run script
         run: |
           python main.py
-          sudo rm -rf .gitignore
+          sudo echo "__pycache__" > .gitignore
 
       - name: Commit files
         run: |
