style: 💄 update `repo_url`

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "repo_url": "https://legado.aoaostar.com",
+  "repo_url": "https://jihulab.com/aoaostar/legado/-/raw/release",
   "source": [
     "all",
     "book",
