--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       matrix:
         platform: [ ubuntu-latest ]
-        python-version: [ 3.x ]
+        python-version: [ 3.9 ]
     name: Build
     runs-on: ${{ matrix.platform }}
     steps:
@@ -23,6 +23,7 @@ jobs:
       - name: Get dependencies
         run: |
           sudo apt-get update
+          sudo apt-get install libxml2 libxml2-dev
           \cp -f /usr/share/zoneinfo/Asia/Shanghai /etc/localtime
 
       - name: Set up python
