--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,10 +28,20 @@ jobs:
           sudo apt-get install libxml2 libxml2-dev
           \cp -f /usr/share/zoneinfo/Asia/Shanghai /etc/localtime
 
-      - name: Set up python
+      - name: Set up Python
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
+
+      - name: Set up Java
+      - uses: actions/checkout@v3
+      - uses: actions/setup-java@v3
+        with:
+          distribution: 'corretto'
+          java-version: '8'
+      - run: |
+          java -version
+          java -jar legado-checker.jar -h
 
       - name: Install dependencies
         run: |
