--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,14 +34,10 @@ jobs:
           python-version: ${{ matrix.python-version }}
 
       - name: Set up Java
-      - uses: actions/checkout@v3
-      - uses: actions/setup-java@v3
+        uses: actions/setup-java@v3
         with:
           distribution: 'corretto'
           java-version: '8'
-      - run: |
-          java -version
-          java -jar legado-checker.jar -h
 
       - name: Install dependencies
         run: |
@@ -51,7 +47,10 @@ jobs:
       - name: Run script
         run: |
           python main.py
-          sudo echo "__pycache__" > .gitignore
+          sudo cat >.gitignore<<EOF
+          __pycache__
+          storage
+          EOF
 
       - name: Commit files
         run: |
