--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -56,6 +56,7 @@ jobs:
           !.gitlab/**
           !cache
           !cache/**
+          !CNAME
           !index.html
           !README.md
           !LISENCE
