fix: 🐛 file `data.json` lost

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -59,6 +59,7 @@ jobs:
           !CNAME
           !index.html
           !README.md
+          !data.json
           !LISENCE
           !.gitignore
           EOF
