fix: 🐛 update repo mirror

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "repo_url": "https://jihulab.com/aoaostar/legado/-/raw/release",
+  "repo_url": "https://mirror.ghproxy.com/https://github.com/aoaostar/legado/raw/release",
   "source": [
     "all",
     "book",
